--- a/AdvancedDatabaseTechniques/AdvancedDatabaseTechniques.csproj
+++ b/AdvancedDatabaseTechniques/AdvancedDatabaseTechniques.csproj
@@ -14,6 +14,7 @@
       <PackageReference Include="Npgsql" Version="8.0.4" />
       <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
       <PackageReference Include="Testcontainers.PostgreSql" Version="3.10.0" />
+      <PackageReference Include="Z.Dapper.Plus" Version="7.5.3" />
     </ItemGroup>
 
 </Project>
